platform/networking/network-policies/rules/allow/ingress/transaction-service/allow-from-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-gateway
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: transaction-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: gateway
      podSelector:
        matchLabels:
          network-role: gateway
          app.kubernetes.io/name: apigateway-ingress
    ports:
    - protocol: TCP
      port: 8083
